--- a/app/css/end.css
+++ b/app/css/end.css
@@ -16,7 +16,7 @@ nav {
   background: url("../img/end-full.png");
   background-repeat: repeat-x;  
   background-size: auto 100%;
-  height: 100vh;
+  /* height: 100vh; */
   padding: 0 5px;
 }
 
