--- a/app/templates/nav.template.html
+++ b/app/templates/nav.template.html
@@ -24,9 +24,9 @@
             Prepper Resources 
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="http://channel.nationalgeographic.com/doomsday-preppers/articles/get-prepped-food/">Food Tips</a>
-            <a class="dropdown-item" href="http://channel.nationalgeographic.com/doomsday-preppers/articles/get-prepped-water/">Water Tips</a>
-            <a class="dropdown-item" href="http://channel.nationalgeographic.com/doomsday-preppers/articles/get-prepped-shelter/">Shelter Tips</a>
+            <a class="dropdown-item" href="http://channel.nationalgeographic.com/doomsday-preppers/articles/get-prepped-food/" target="_blank">Food Tips</a>
+            <a class="dropdown-item" href="http://channel.nationalgeographic.com/doomsday-preppers/articles/get-prepped-water/" target="_blank">Water Tips</a>
+            <a class="dropdown-item" href="http://channel.nationalgeographic.com/doomsday-preppers/articles/get-prepped-shelter/" target="_blank">Shelter Tips</a>
           </div>
         </li>
       </ul>
