--- a/app/templates/prepper-stats.template.html
+++ b/app/templates/prepper-stats.template.html
@@ -3,7 +3,7 @@
 <section class="prepper-body">
     <form class="prepper_form" ng-submit="$ctrl.calsPerDay();">
         
-        <h5 class="stat_header font-headings">Choose a Character</h5>
+        <h5 class="stat_header font-headings">Choose a character and enter in stats</h5>
 
         <div class="male_female">
             
@@ -22,8 +22,7 @@
                     <div class="female-idle"></div>
                 </label> 
             </div>
-        </div>
-        <h5 class="font-headings">Enter Stats</h5>
+        </div>        
 
         <!--With bootstrap-->
         <div class="form-group">
