--- a/app/templates/story.template.html
+++ b/app/templates/story.template.html
@@ -1,3 +1,5 @@
+
+<div class="background-color">
 <section class="story-background">
     <div class="talk-bubble bubble">
         <div class="talktext">
@@ -6,3 +8,4 @@
         </div>
     </div>
 </section>
+</div>
