--- a/app/css/locations.css
+++ b/app/css/locations.css
@@ -139,7 +139,7 @@ nav {
   }
   
   @keyframes walk-east-female {
-    100% { background-position: -1280px; }
+    100% { background-position: -1200px; }
   }
   
   @keyframes forward {
@@ -167,12 +167,14 @@ nav {
         display: flex;
         min-height: 40vh;
     }
+
     .story {
         display: inline;
         border-right: #777777 1px solid;
         border-left: #777777 1px solid;
         background-color: #555555;
         padding: 25px;
+        flex-basis: 35%;
     }   
     .available-items-container {        
         width: 40%; 
@@ -193,12 +195,14 @@ nav {
     .hidden-for-small {
         display: block;
     }
+
     .bag-container {
         width: 20%;
         padding: 25px;
         background-color: #555555;
         border-left: #2e2e2e 1px solid;
         color: white;
+        flex-basis: 35%;
     }
     .bag-item-place-holder {
         height: 100px;
