--- a/app/css/locations.css
+++ b/app/css/locations.css
@@ -46,6 +46,7 @@ nav {
     display: flex;
     flex-wrap: wrap;   
     width: 100%;
+    cursor: url(../img/icons/add.png), auto;
 }
     
 
@@ -107,7 +108,7 @@ nav {
     justify-content: center;   
     border: #777777 1px solid;
     border-radius: 5px;
-    cursor: url("img/remove-item.png"), auto;
+    cursor: url(../img/icons/delete.png), auto;
 }
 
 .question-mark {
@@ -124,8 +125,8 @@ nav {
   
 .female {
     background: url("../img/sprites/girl_run_120.png");
-    width: 128px;
-    height: 128px;
+    width: 120px;
+    height: 120px;
     /* animation: walk-east-female .5s steps(10) infinite; */
     /* position: fixed; */
 }
@@ -167,14 +168,12 @@ nav {
         display: flex;
         min-height: 40vh;
     }
-
     .story {
         display: inline;
         border-right: #777777 1px solid;
         border-left: #777777 1px solid;
         background-color: #555555;
         padding: 25px;
-        flex-basis: 35%;
     }   
     .available-items-container {        
         width: 40%; 
@@ -185,24 +184,24 @@ nav {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        cursor: url(../img/icons/add.png), auto;
     }
    
     .available-food-img {
         width: 50px;
         height: 50px;
         margin-top: 8px;
+        
     }
     .hidden-for-small {
         display: block;
     }
-
     .bag-container {
         width: 20%;
         padding: 25px;
         background-color: #555555;
         border-left: #2e2e2e 1px solid;
         color: white;
-        flex-basis: 35%;
     }
     .bag-item-place-holder {
         height: 100px;
@@ -210,6 +209,7 @@ nav {
         display: flex;        
         cursor: url("img/remove-items-lg.png"), auto;
         flex-direction: column;
+        cursor: url(../img/icons/delete.png), auto;
     }
 
   .available-items {
