--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -16,6 +16,7 @@ body {
   justify-content: space-evenly;
   align-items: center;
   font-family: 'Oswald', sans-serif;
+  font-size: 16px;
   text-align: center;
   color: white;  
 }
