update font size

--- a/app/css/end.css
+++ b/app/css/end.css
@@ -78,7 +78,9 @@ border-radius: 50%;
     width: 60%;
     margin: auto;    
   }    
-   
+   .ending-stats {
+     font-size: 1.5rem;
+   }
 
   }
   
