--- a/app/templates/locations.template.html
+++ b/app/templates/locations.template.html
@@ -11,7 +11,7 @@
 
         <section class="story">
             <h3 class="font-headings">You are at {{ $ctrl.currentLocation[$ctrl.counter].name }}</h3>
-            <p> {{ $ctrl.currentMessage }} </p>
+            <p class="story-size"> {{ $ctrl.currentMessage }} </p>
         </section>
 
         <section class="available-items-container">
