--- a/app/templates/prepper-stats.template.html
+++ b/app/templates/prepper-stats.template.html
@@ -46,6 +46,6 @@
             You need {{ $ctrl.user.result }} calories per day.
         </label>
 
-        <button class="go_button btn btn-secondary" ng-click="$ctrl.nextPage($ctrl.user); $ctrl.calsPerDay();">Let's Go!</button>
+        <button class="fuller-button white start-game" ng-click="$ctrl.nextPage($ctrl.user); $ctrl.calsPerDay();">Let's Go!</button>
     </form>
 </section>
