--- a/app/css/prepper-stats.css
+++ b/app/css/prepper-stats.css
@@ -14,7 +14,9 @@
     background-image: url("../img/layers-end/l1_sky-mobile.png"); 
     background-repeat: repeat-x;    
     background-size: auto 100%;
-    height: 100%;
+    /* height: 100%; */
+    background-attachment: fixed;
+    
 }
 .stat_header{
     margin-bottom: 0;
@@ -24,7 +26,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */    
 }
 
 form {
@@ -79,10 +81,15 @@ form {
     cursor: pointer;
 }
 
-.go_button {
+/* .go_button {
     width: 100%;
     padding: .25rem;
     margin-bottom: 1rem;
+    height: 50px;
+} */
+.start-game {
+    margin: 0;
+    margin-top: 20px;
 }
 
 
@@ -91,11 +98,22 @@ form {
     .prepper_form {
         width: 40%;
         margin: 0 auto;
+        font-size: 2rem;
     }
     .stat_header {
         font-size: 3rem;       
     }
-
+    .prepper-body {
+        height: 100vh;
+    }
+    
+    
+   
+  }
+  
+  
+  /*********************************************************** For Desktop */
+  @media only screen and (min-width: 1000px){
     .male_female {
         display: flex;
         justify-content: space-evenly;
@@ -122,12 +140,6 @@ form {
      @keyframes male {
         100% { background-position: -2400px; }
      }
-   
-  }
-  
-  
-  /*********************************************************** For Desktop */
-  @media only screen and (min-width: 1000px){
   
   }
      
