--- a/app/templates/nav.template.html
+++ b/app/templates/nav.template.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <a class="navbar-brand hidden-for-small" ng-click="$ctrl.resetGame();" href="/#!">
       <img src="../img/logofull.png" width="100%" height="50px" class="d-inline-block align-top nav-logo" alt="">
     </a>
@@ -33,7 +33,7 @@
     </div>
   </nav>
 
-
+  <!--  navbar-dark bg-transparent -->
   <section class="popup" ng-show="$ctrl.popup">
       <img src="../img/close-x-32.png" class="close-btn" ng-click="$ctrl.close();">
       <h1 class="about-title font-headings">Doomsday Trail</h1>
