final final changes

--- a/app/css/end.css
+++ b/app/css/end.css
@@ -17,7 +17,7 @@ nav {
   background-repeat: repeat-x;  
   background-size: auto 100%;  
   padding: 0 5px;   
-  background-attachment: fixed;
+  background-attachment: fixed;  
 }
 
 .jumping-female {
@@ -80,6 +80,9 @@ border-radius: 50%;
   }    
    .ending-stats {
      font-size: 1.5rem;
+   }
+   .end-container {
+    height: 100%;
    }
 
   }
