--- a/app/css/prepper-stats.css
+++ b/app/css/prepper-stats.css
@@ -10,13 +10,17 @@
     padding: 20px;
 }
 
-.prepper-body {
+/* .prepper-body {
     background-image: url("../img/layers-end/l1_sky-mobile.png"); 
     background-repeat: repeat-x;    
-    background-size: auto 100%;
-    /* height: 100%; */
+    background-size: auto 100%;    
     background-attachment: fixed;
     
+} */
+
+.prepper-body {
+    background: linear-gradient(to bottom, #3333cc 0%, #ff99cc 100%);
+   height: 100%;
 }
 .stat_header{
     margin-bottom: 0;
@@ -81,12 +85,6 @@ form {
     cursor: pointer;
 }
 
-/* .go_button {
-    width: 100%;
-    padding: .25rem;
-    margin-bottom: 1rem;
-    height: 50px;
-} */
 .start-game {
     margin: 0;
     margin-top: 20px;
@@ -103,9 +101,9 @@ form {
     .stat_header {
         font-size: 3rem;       
     }
-    .prepper-body {
+    /* .prepper-body {
         height: 100vh;
-    }
+    } */
     
     
    
