Fixed story background

--- a/app/css/story.css
+++ b/app/css/story.css
@@ -101,7 +101,7 @@
 @media only screen and (min-width: 600px){
   .story-background {
     background-image: url("../img/story-building-background.png"); 
-    
+    background-size: contain;
   }
 
   .talk-bubble {
