--- a/app/templates/end.template.html
+++ b/app/templates/end.template.html
@@ -16,7 +16,7 @@
 <div class="final_container">
     <div class="final-items" ng-repeat="item in $ctrl.endBag track by $index">
         <img class="final-food-img hidden-for-small" ng-src="{{ item.img }}">
-        <p>{{ item.food_name }} </p><br>
+        <p>{{ item.food_name }} - {{item.serving_qty}} {{item.serving_unit}} </p><br>
         <p>{{ item.cal }} Calories</p>
     </div>
 </div>
